--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,12 @@ author_email = sunpy@googlegroups.com
 license = BSD 2-Clause
 license_file = LICENSE.rst
 url = https://docs.sunpy.org/projects/ndcube/
+download_url = https://pypi.org/project/ndcube/
+project_urls=
+  Source Code = https://github.com/sunpy/ndcube/
+  Documentation = https://docs.sunpy.org/projects/ndcube/
+  Changelog = https://docs.sunpy.org/projects/ndcube/en/stable/whatsnew/changelog.html
+  Issue Tracker = https://github.com/sunpy/ndcube/issues
 description = A package for multi-dimensional contiguious and non-contiguious coordinate aware arrays.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
@@ -21,16 +27,16 @@ classifiers =
   Operating System :: OS Independent
   Programming Language :: Python
   Programming Language :: Python :: 3
-  Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
+  Programming Language :: Python :: 3.10
   Topic :: Scientific/Engineering :: Physics
 
 [options]
 zip_safe = False
 packages = find:
 include_package_data = True
-python_requires = >=3.7
+python_requires = >=3.8
 install_requires =
   astropy>=4.2
   gwcs>=0.15
@@ -43,12 +49,14 @@ tests =
     pytest-mpl>=0.12
     sunpy
 docs =
-    pytest-doctestplus>=0.9.0  # First version with the sphinx ext
+    matplotlib
+    pytest-doctestplus>=0.9.0
     sphinx
     sphinx-automodapi
     sphinx-changelog>=1.1.0
+    sphinx-gallery
+    sphinxext-opengraph
     sunpy-sphinx-theme
-    matplotlib
 plotting =
     matplotlib>=3.2
     mpl_animators>=1.0
