copy and paste gone wrong

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ isolated_build = true
 pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
 # We use bash in some of our environments so we have to whitelist it.
 whitelist_externals=
-    /bin/bashgit@github.com:sunpy/ndcube.git
+    /bin/bash
     /usr/bin/bash
 # Run the tests in a temporary directory to make sure that we don't import ndcube from the source tree
 changedir = .tmp/{envname}
