--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     py{38,39,310}{,-devdeps,-online,-figure,-conda,-oldestdeps}
-    build_docs{,-gallery}
+    build_docs
     codestyle
 requires =
     setuptools >=56, !=61.0.0
@@ -73,7 +73,7 @@ commands =
 install_command =
   devdeps: python -m pip install --pre --extra-index-url=https://pkgs.dev.azure.com/astropy-project/astropy/_packaging/nightly/pypi/simple/ {opts} {packages}
 
-[testenv:build_docs{,-gallery}]
+[testenv:build_docs]
 changedir = docs
 description = Invoke sphinx-build to build the HTML docs
 extras =
@@ -82,7 +82,6 @@ extras =
 commands =
     pip freeze --all --no-input
     gallery: sphinx-build -j auto --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
-    !gallery: sphinx-build -j auto --color -W --keep-going -b html -d _build/.doctrees -D plot_gallery=0 . _build/html {posargs}
     python -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxinidir}") / "docs" / "_build" / "index.html"))'
 
 [testenv:codestyle]
