--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,8 +1,15 @@
-# .readthedocs.yml
-# Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
 version: 2
+
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "mambaforge-4.10"
+  jobs:
+    pre_install:
+      - git update-index --assume-unchanged .rtd-environment.yml docs/conf.py
+
+conda:
+  environment: .rtd-environment.yml
 
 sphinx:
   builder: html
@@ -13,5 +20,6 @@ python:
    install:
      - method: pip
        extra_requirements:
-          - dev
+        - all
+        - docs
        path: .
