--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ provides = ndcube
 author = The SunPy Community
 author_email = sunpy@googlegroups.com
 license = BSD 2-Clause
-license_file = LICENSE.rst
+license_files = LICENSE.rst
 url = https://docs.sunpy.org/projects/ndcube/
 download_url = https://pypi.org/project/ndcube/
 project_urls=
