--- a/tox.ini
+++ b/tox.ini
@@ -92,7 +92,7 @@ commands =
     pre-commit run --color always --all-files --show-diff-on-failure
 
 # This env requires tox-conda.
-[testenv:conda]
+[testenv:py{38,39,310}-conda]
 pypi_filter =
 extras =
 deps =
