--- a/setup.cfg
+++ b/setup.cfg
@@ -68,7 +68,7 @@ exclude = ndcube._dev
 
 [tool:pytest]
 testpaths = "ndcube" "docs"
-norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples"
+norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
 text_file_format = rst
