--- a/setup.cfg
+++ b/setup.cfg
@@ -105,6 +105,7 @@ filterwarnings =
     ignore:FLIP_TOP_BOTTOM is deprecated
     # This is hit on oldestdeps
     ignore:distutils Version classes are deprecated
+    ignore:The default kernel will change from 'Hann' to  'Gaussian' in a future release. To suppress this warning, explicitly select a kernel with the 'kernel' argument.:FutureWarning
 
 [flake8]
 exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
