--- a/setup.cfg
+++ b/setup.cfg
@@ -68,7 +68,7 @@ exclude = ndcube._dev
 
 [tool:pytest]
 testpaths = "ndcube" "docs"
-norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples"
+norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
 text_file_format = rst
@@ -105,6 +105,8 @@ filterwarnings =
     ignore:FLIP_TOP_BOTTOM is deprecated
     # This is hit on oldestdeps
     ignore:distutils Version classes are deprecated
+    ignore:The default kernel will change from 'Hann' to  'Gaussian' in a future release. To suppress this warning, explicitly select a kernel with the 'kernel' argument.:FutureWarning
+    ignore:The default boundary mode will change from 'ignore' to  'strict' in a future release. To suppress this warning, explicitly select a mode with the 'boundary_mode' argument.:FutureWarning
 
 [flake8]
 exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
