--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ setenv =
     MPLBACKEND = agg
     COLUMNS = 180
     PYTEST_COMMAND = pytest -vvv -s -raR --pyargs ndcube --cov-report=xml --cov=ndcube --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
-    HIDE_PARFIVE_PROGESS = True
+    PARFIVE_HIDE_PROGESS = True
     devdeps: PIP_EXTRA_INDEX_URL = https://pypi.anaconda.org/astropy/simple https://pypi.anaconda.org/scipy-wheels-nightly/simple
 passenv =
     HTTP_PROXY
@@ -38,6 +38,7 @@ deps =
     # of key dependencies.
     # Astropy is installed from the nightly wheels
     devdeps: astropy>=0.0dev0
+    devdeps: matplotlib>=0.0dev0
     devdeps: git+https://github.com/sunpy/sunpy
     devdeps: git+https://github.com/sunpy/mpl-animators
     devdeps: git+https://github.com/spacetelescope/gwcs
@@ -53,9 +54,14 @@ deps =
     oldestdeps: mpl_animators<1.1
     oldestdeps: reproject==0.7.1
     # Figure tests need a tightly controlled environment
-    figure: matplotlib==3.5.2
-    figure-!devdeps: astropy==5.1.0
+    # These are the oldestdeps which have py310 wheels as running multiple
+    # versions of Python on circleci is a little annoying.
+    # Newer versions are covered by devdeps
+    figure-!devdeps: matplotlib==3.5.3
+    figure-!devdeps: astropy==5.0.4
     figure-!devdeps: mpl-animators==1.0.0
+    # For some reason gwcs 0.18.2 bumped astropy to 5.1 min
+    figure-!devdeps: gwcs<0.18.2
 extras =
     all
     tests
