"fix" reproject 0.9 issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ plotting =
     matplotlib>=3.2
     mpl_animators>=1.0
 reproject =
-    reproject>=0.7.1
+    reproject>=0.7.1,<0.10
 
 [options.packages.find]
 exclude = ndcube._dev
