--- a/tox.ini
+++ b/tox.ini
@@ -42,8 +42,9 @@ passenv =
     NO_PROXY
     CIRCLECI
 deps =
-    # We need this for some packages.
-    setuptools
+    # To avoid warnings we only test with 0.8.
+    # We only support <0.9
+    reproject<0.9
 
     # The devdeps factor is intended to be used to install the latest developer version.
     # of key dependencies.
