--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ classifiers =
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
+  Programming Language :: Python :: 3.11
   Topic :: Scientific/Engineering :: Physics
 
 [options]
@@ -47,7 +48,7 @@ tests =
     pytest
     pytest-astropy
     pytest-mpl>=0.12
-    sunpy
+    sunpy>=4.0.0
 docs =
     matplotlib
     pytest-doctestplus>=0.9.0
