--- a/tox.ini
+++ b/tox.ini
@@ -74,7 +74,7 @@ commands =
     figure: python -c "import ndcube.tests.helpers as h; print(h.get_hash_library_name())"
     figure: {env:PYTEST_COMMAND} -m "mpl_image_compare" --mpl --remote-data=any --mpl-generate-summary=html --mpl-baseline-path=https://raw.githubusercontent.com/sunpy/sunpy-figure-tests/ndcube-main/figures/{envname}/ {posargs}
 install_command =
-  devdeps: python -m pip install --extra-index-url=https://pkgs.dev.azure.com/astropy-project/astropy/_packaging/nightly/pypi/simple/ {opts} {packages}
+    devdeps: python -m pip install --extra-index-url=https://pypi.anaconda.org/astropy/simple {opts} {packages}
 
 [testenv:build_docs]
 changedir = docs
