--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ isolated_build = true
 [testenv]
 pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
 # We use bash in some of our environments so we have to whitelist it.
-whitelist_externals=
+allowlist_externals=
     /bin/bash
     /usr/bin/bash
 # Run the tests in a temporary directory to make sure that we don't import ndcube from the source tree
@@ -98,17 +98,24 @@ commands =
     pre-commit run --color always --all-files --show-diff-on-failure
 
 # This env requires tox-conda.
-[testenv:py{38,39,310}-conda]
+[testenv:py{38,39,310,311}-conda]
 pypi_filter =
 extras =
 deps =
 conda_deps =
+    numpy
     astropy
     matplotlib
     gwcs
     sunpy
+    pytest
+    pytest-mpl
+    pytest-astropy
+    reproject
+    mpl_animators
 conda_channels = conda-forge
-install_command = pip install --no-deps {opts} {packages}
+allowlist_externals = conda
+install_command = pip install --no-deps --no-build-isolation {opts} {packages}
 commands =
     conda list
     {env:PYTEST_COMMAND} {posargs}
