--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist =
 requires =
     setuptools >=56, !=61.0.0
     pip >= 19.3.1
+    tox < 4
     tox-pypi-filter >= 0.12
 isolated_build = true
 
