Add dask to test dependencies.

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ tests =
     pytest-astropy
     pytest-mpl>=0.12
     sunpy>=4.0.0
+    dask
 docs =
     matplotlib
     pytest-doctestplus>=0.9.0
