--- a/tox.ini
+++ b/tox.ini
@@ -35,6 +35,7 @@ passenv =
     NO_PROXY
     CIRCLECI
 deps =
+    dask
     # The devdeps factor is intended to be used to install the latest developer version.
     # of key dependencies.
     # Astropy is installed from the nightly wheels
