--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ deps =
     oldestdeps: sunpy<4.0
     oldestdeps: astropy<4.3
     oldestdeps: gwcs<0.16
-    oldestdeps: numpy<1.18
+    oldestdeps: numpy==1.20.0
     oldestdeps: matplotlib<3.3
     oldestdeps: mpl_animators<1.1
     oldestdeps: reproject==0.7.1
