--- a/setup.cfg
+++ b/setup.cfg
@@ -64,6 +64,8 @@ plotting =
     mpl_animators>=1.0
 reproject =
     reproject>=0.7.1
+    # Not a direct dependency, but we need to pin this until sphinx-changelog is updated (see https://github.com/sunpy/sunpy/issues/6668)
+    towncrier<22.12.0
 
 [options.packages.find]
 exclude = ndcube._dev
