Refactor SkyCoordTableCoordinate.interpolate.

--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,7 @@ passenv =
     CIRCLECI
 deps =
     dask
+    scipy
     # The devdeps factor is intended to be used to install the latest developer version.
     # of key dependencies.
     # Astropy is installed from the nightly wheels
