Update minimum version test dependencies.

--- a/tox.ini
+++ b/tox.ini
@@ -35,8 +35,6 @@ passenv =
     NO_PROXY
     CIRCLECI
 deps =
-    dask
-    scipy
     # The devdeps factor is intended to be used to install the latest developer version.
     # of key dependencies.
     # Astropy is installed from the nightly wheels
@@ -45,9 +43,13 @@ deps =
     devdeps: git+https://github.com/sunpy/sunpy
     devdeps: git+https://github.com/sunpy/mpl-animators
     devdeps: git+https://github.com/spacetelescope/gwcs
+    devdeps: scipy
+    devdeps: dask
     # These are specific online extras we use to run the online tests.
     online: pytest-rerunfailures
     online: pytest-timeout
+    online: scipy
+    online: dask
     # Oldest Dependancies
     oldestdeps: sunpy<4.0
     oldestdeps: astropy<4.3
@@ -56,6 +58,8 @@ deps =
     oldestdeps: matplotlib<3.3
     oldestdeps: mpl_animators<1.1
     oldestdeps: reproject==0.7.1
+    oldestdeps: scipy<1.8.0
+    oldestdeps: dask<2021.5.0
     # Figure tests need a tightly controlled environment
     # These are the oldestdeps which have py310 wheels as running multiple
     # versions of Python on circleci is a little annoying.
@@ -63,6 +67,8 @@ deps =
     figure-!devdeps: matplotlib==3.5.3
     figure-!devdeps: astropy==5.0.4
     figure-!devdeps: mpl-animators==1.0.0
+    figure-!devdeps: scipy
+    figure-!devdeps: dask
     # For some reason gwcs 0.18.2 bumped astropy to 5.1 min
     figure-!devdeps: gwcs<0.18.2
 extras =
