--- a/setup.cfg
+++ b/setup.cfg
@@ -108,7 +108,7 @@ filterwarnings =
     # WCSAxes is raising this
     ignore:FLIP_TOP_BOTTOM is deprecated
     # This is hit on oldestdeps
-    ignore:distutils Version classes are deprecated
+    ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning
     ignore:The default kernel will change from 'Hann' to  'Gaussian' in a future release. To suppress this warning, explicitly select a kernel with the 'kernel' argument.:FutureWarning
     ignore:The default boundary mode will change from 'ignore' to  'strict' in a future release. To suppress this warning, explicitly select a mode with the 'boundary_mode' argument.:FutureWarning
 
