--- a/tox.ini
+++ b/tox.ini
@@ -60,8 +60,9 @@ deps =
     # versions of Python on circleci is a little annoying.
     # Newer versions are covered by devdeps
     figure-!devdeps: matplotlib==3.5.3
-    figure-!devdeps: astropy==5.0.4
+    figure-!devdeps: astropy==5.1.0
     figure-!devdeps: mpl-animators==1.0.0
+    figure-!devdeps: numpy<1.24
     # For some reason gwcs 0.18.2 bumped astropy to 5.1 min
     figure-!devdeps: gwcs<0.18.2
 extras =
