--- a/setup.cfg
+++ b/setup.cfg
@@ -45,11 +45,12 @@ install_requires =
 
 [options.extras_require]
 tests =
+    dask
     pytest
     pytest-astropy
     pytest-mpl>=0.12
+    scipy
     sunpy>=4.0.0
-    dask
 docs =
     matplotlib
     pytest-doctestplus>=0.9.0
