--- a/tox.ini
+++ b/tox.ini
@@ -43,13 +43,9 @@ deps =
     devdeps: git+https://github.com/sunpy/sunpy
     devdeps: git+https://github.com/sunpy/mpl-animators
     devdeps: git+https://github.com/spacetelescope/gwcs
-    devdeps: scipy
-    devdeps: dask
     # These are specific online extras we use to run the online tests.
     online: pytest-rerunfailures
     online: pytest-timeout
-    online: scipy
-    online: dask
     # Oldest Dependancies
     oldestdeps: sunpy<4.0
     oldestdeps: astropy<4.3
@@ -67,15 +63,13 @@ deps =
     figure-!devdeps: matplotlib==3.5.3
     figure-!devdeps: astropy==5.0.4
     figure-!devdeps: mpl-animators==1.0.0
-    figure-!devdeps: scipy
-    figure-!devdeps: dask
     # For some reason gwcs 0.18.2 bumped astropy to 5.1 min
     figure-!devdeps: gwcs<0.18.2
 extras =
     all
     tests
 commands =
-    !online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
+    !oldestdeps-!online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
     online: {env:PYTEST_COMMAND} --reruns 2 --reruns-delay 15 --timeout=180 --remote-data=any {posargs}
     oldestdeps: {env:PYTEST_COMMAND} {posargs} -p no:warning
     figure: /bin/bash -c "mkdir -p ./figure_test_images; python -c 'import matplotlib as mpl; print(mpl.ft2font.__file__, mpl.ft2font.__freetype_version__, mpl.ft2font.__freetype_build_type__)' > ./figure_test_images/figure_version_info.txt"
