--- a/setup.cfg
+++ b/setup.cfg
@@ -94,6 +94,8 @@ filterwarnings =
     # is being ignored
     #
     #
+    # This is hit on oldestdeps
+    ignore:.*distutils Version classes are deprecated.*
     # This is due to dependencies building with a numpy version different from
     # the local installed numpy version, but should be fine
     # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
@@ -108,8 +110,6 @@ filterwarnings =
     ignore::UserWarning
     # WCSAxes is raising this
     ignore:FLIP_TOP_BOTTOM is deprecated
-    # This is hit on oldestdeps
-    ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning
     ignore:The default kernel will change from 'Hann' to  'Gaussian' in a future release. To suppress this warning, explicitly select a kernel with the 'kernel' argument.:FutureWarning
     ignore:The default boundary mode will change from 'ignore' to  'strict' in a future release. To suppress this warning, explicitly select a mode with the 'boundary_mode' argument.:FutureWarning
 
