--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ deps =
     # These are specific online extras we use to run the online tests.
     online: pytest-rerunfailures
     online: pytest-timeout
-    # Oldest Dependancies
+    # Oldest Dependencies
     oldestdeps: sunpy<4.0
     oldestdeps: astropy<4.3
     oldestdeps: gwcs<0.16
