--- a/.gitignore
+++ b/.gitignore
@@ -208,7 +208,7 @@ ndcube/_compiler.c
 ndcube/_version.py
 docs/_build
 docs/generated
-docs/api/
+docs/api
 examples/**/*.asdf
 examples/**/*.csv
 figure_test_images*
