--- a/.sunpy-template.yml
+++ b/.sunpy-template.yml
@@ -1,7 +1,7 @@
 default_context:
   package_name: ndcube
   module_name: ndcube
-  short_description: A package for multi-dimensional contiguious and non-contiguious coordinate aware arrays.
+  short_description: A package for multi-dimensional contiguous and non-contiguous coordinate aware arrays.
   author_name: The SunPy Community
   author_email: sunpy@googlegroups.com
   license: BSD 2-Clause
