--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,9 @@
 [tox]
+min_version = 4.0
 envlist =
-    py{38,39,310}{,-devdeps,-online,-figure,-conda,-oldestdeps}
+    py{38,39,310,311}{,-devdeps,-online,-figure,-conda,-oldestdeps}
     build_docs
     codestyle
-requires =
-    setuptools >=56, !=61.0.0
-    pip >= 19.3.1
-    tox < 4
-    tox-pypi-filter >= 0.12
-isolated_build = true
 
 [testenv]
 pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
@@ -28,7 +23,7 @@ setenv =
     COLUMNS = 180
     PYTEST_COMMAND = pytest -vvv -s -raR --pyargs ndcube --cov-report=xml --cov=ndcube --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
     PARFIVE_HIDE_PROGESS = True
-    devdeps: PIP_EXTRA_INDEX_URL = https://pypi.anaconda.org/astropy/simple https://pypi.anaconda.org/scipy-wheels-nightly/simple
+    devdeps: PIP_EXTRA_INDEX_URL = https://pypi.anaconda.org/astropy/simple https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
 passenv =
     HTTP_PROXY
     HTTPS_PROXY
@@ -79,8 +74,6 @@ commands =
     figure: /bin/bash -c "cat ./figure_test_images/figure_version_info.txt"
     figure: python -c "import ndcube.tests.helpers as h; print(h.get_hash_library_name())"
     figure: {env:PYTEST_COMMAND} -m "mpl_image_compare" --mpl --remote-data=any --mpl-generate-summary=html --mpl-baseline-path=https://raw.githubusercontent.com/sunpy/sunpy-figure-tests/ndcube-main/figures/{envname}/ {posargs}
-install_command =
-    devdeps: python -m pip install --extra-index-url=https://pypi.anaconda.org/astropy/simple {opts} {packages}
 
 [testenv:build_docs]
 changedir = docs
