--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,8 @@ docs =
     pytest-doctestplus>=0.9.0
     sphinx
     sphinx-automodapi
+    # Remove next line when fixed in towncrier; see https://github.com/twisted/towncrier/issues/528
+    importlib-resources<6
     sphinx-changelog>=1.1.0
     sphinx-gallery
     sphinxext-opengraph
