--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,89 @@
 [build-system]
 requires = [
-  "setuptools",
-  "setuptools_scm",
-  "wheel",
+  "setuptools>=62.1",
+  "setuptools_scm[toml]>=6.2",
+  "wheel",]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "ndcube"
+description = "A package for multi-dimensional contiguous and non-contiguous coordinate aware arrays."
+readme = "README.rst"
+requires-python = ">=3.9"
+license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }
+authors = [
+  { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
 ]
-build-backend = 'setuptools.build_meta'
+dependencies = []
+dynamic = ["version"]
+
+[project.optional-dependencies]
+tests = [
+    "pytest",
+    "pytest-doctestplus",
+    "pytest-cov",
+]
+docs = [
+    "sphinx",
+    "sphinx-automodapi",
+    "tomli; python_version <\"3.11\"",
+]
+
+[project.urls]
+repository = "https://docs.sunpy.org/projects/ndcube/"
+
+[tool.setuptools]
+zip-safe = false
+include-package-data = true
+
+[tool.setuptools.packages.find]
+
+[tool.setuptools_scm]
+write_to = "ndcube/_version.py"
+
+[tool.pytest.ini_options]
+testpaths = [
+  "ndcube",
+  "docs",
+]
+doctest_plus = "enabled"
+text_file_format = "rst"
+addopts = "--doctest-rst"
+
+[tool.coverage.run]
+omit = [
+ "ndcube/__init*",
+ "ndcube/conftest.py",
+ "ndcube/*setup_package*",
+ "ndcube/tests/*",
+ "ndcube/*/tests/*",
+ "ndcube/extern/*",
+ "ndcube/version*",
+ "*/ndcube/__init*",
+ "*/ndcube/conftest.py",
+ "*/ndcube/*setup_package*",
+ "*/ndcube/tests/*",
+ "*/ndcube/*/tests/*",
+ "*/ndcube/extern/*",
+ "*/ndcube/version*",
+]
+
+[tool.coverage.report]
+exclude_lines = [
+  # Have to re-enable the standard pragma
+  "pragma: no cover",
+  # Don't complain about packages we have installed
+  "except ImportError",
+  # Don't complain if tests don't hit assertions
+  "raise AssertionError",
+  "raise NotImplementedError",
+  # Don't complain about script hooks
+  "def main(.*):",
+  # Ignore branches that don't pertain to this version of Python
+  "pragma: py{ignore_python_version}",
+  # Don't complain about IPython completion helper
+  "def _ipython_key_completions_",
+]
 
 [tool.towncrier]
     package = "ndcube"
