--- a/.ruff.toml
+++ b/.ruff.toml
@@ -28,12 +28,16 @@ extend-ignore = [
 # Part of configuration, not a package.
 "setup.py" = ["INP001"]
 "conftest.py" = ["INP001"]
-# Implicit-namespace-package. The examples are not a package.
-"docs/*.py" = ["INP001"]
+"docs/conf.py" = [
+  "E402"  # Module imports not at top of file
+]
+"docs/*.py" = [
+  "INP001",  # Implicit-namespace-package. The examples are not a package.
+]
 "__init__.py" = ["E402", "F401", "F403"]
 "test_*.py" = ["B011", "D", "E402", "PGH001", "S101"]
 # Need to import clients to register them, but don't use them in file
 "ndcube/net/__init__.py" = ["F811"]
 
-[pydocstyle]
+[lint.pydocstyle]
 convention = "numpy"
