--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,13 @@
 [tox]
 min_version = 4.0
+requires =
+    tox-pypi-filter>=0.14
 envlist =
-    py{39,310,311}{,-devdeps,-online,-figure,-conda,-oldestdeps}
-    build_docs
+    py{310,311,312}
+    py312-devdeps
+    py310-oldestdeps
     codestyle
+    build_docs
 
 [testenv]
 pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
@@ -15,10 +19,22 @@ allowlist_externals=
 changedir = .tmp/{envname}
 description =
     run tests
+    oldestdeps: with the oldest supported version of key dependencies
     devdeps: with the latest developer version of key dependencies
     online: that require remote data (as well as the offline ones)
     figure: runs the figure test suite.
-setenv =
+
+pass_env =
+    # A variable to tell tests we are on a CI system
+    CI
+    # Custom compiler locations (such as ccache)
+    CC
+    # Location of locales (needed by sphinx on some systems)
+    LOCALE_ARCHIVE
+    # If the user has set a LC override we should follow it
+    LC_ALL
+
+set_env =
     MPLBACKEND = agg
     COLUMNS = 180
     PYTEST_COMMAND = pytest -vvv -s -raR --pyargs ndcube --cov-report=xml --cov=ndcube --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
