--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,13 +96,11 @@ jobs:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   publish_pure:
-      needs: [test, docs]
-      uses: OpenAstronomy/github-actions-workflows/.github/workflows/publish_pure_python.yml@main
       if: |
         github.event_name != 'pull_request' && (
           github.ref_name != 'main' ||
           github.event_name == 'workflow_dispatch' )
-      needs: [test]
+      needs: [test, docs]
       uses: OpenAstronomy/github-actions-workflows/.github/workflows/publish_pure_python.yml@v1
       with:
         python-version: '3.10'
@@ -113,7 +111,7 @@ jobs:
         pypi_token: ${{ secrets.pypi_token }}
   notify:
     if: always() && github.event_name == 'workflow_dispatch'
-    needs: [publish, cron]
+    needs: [publish_pure, cron]
     runs-on: ubuntu-latest
     steps:
       - uses: Cadair/matrix-notify-action@main
