--- a/tox.ini
+++ b/tox.ini
@@ -58,15 +58,7 @@ deps =
     online: pytest-rerunfailures
     online: pytest-timeout
     # Oldest Dependencies
-    oldestdeps: sunpy<4.0
-    oldestdeps: astropy<4.3
-    oldestdeps: gwcs<0.16
-    oldestdeps: numpy<1.23
-    oldestdeps: matplotlib<3.3
-    oldestdeps: mpl_animators<1.1
-    oldestdeps: reproject==0.7.1
-    oldestdeps: scipy<1.8.0
-    oldestdeps: dask<2021.5.0
+    oldestdeps: minimum_dependencies
     # Figure tests need a tightly controlled environment
     figure-!devdeps: matplotlib==3.7.2
     figure-!devdeps: astropy==5.3.3
@@ -79,6 +71,8 @@ extras =
 commands =
     !oldestdeps-!online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
     online: {env:PYTEST_COMMAND} --reruns 2 --reruns-delay 15 --timeout=180 --remote-data=any {posargs}
+    oldestdeps: minimum_dependencies {{ cookiecutter.module_name }} --filename requirements-min.txt
+    oldestdeps: pip install -r requirements-min.txt
     figure: /bin/bash -c "mkdir -p ./figure_test_images; python -c 'import matplotlib as mpl; print(mpl.ft2font.__file__, mpl.ft2font.__freetype_version__, mpl.ft2font.__freetype_build_type__)' > ./figure_test_images/figure_version_info.txt"
     figure: /bin/bash -c "pip freeze >> ./figure_test_images/figure_version_info.txt"
     figure: /bin/bash -c "cat ./figure_test_images/figure_version_info.txt"
