--- a/tox.ini
+++ b/tox.ini
@@ -66,7 +66,8 @@ deps =
     figure-!devdeps: scipy
     figure-!devdeps: dask
 extras =
-    all
+    plotting
+    reproject
     tests
 commands =
     !oldestdeps-!online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
@@ -83,7 +84,8 @@ commands =
 changedir = docs
 description = Invoke sphinx-build to build the HTML docs
 extras =
-    all
+    plotting
+    reproject
     docs
 commands =
     pip freeze --all --no-input
