Recitfy pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -16,7 +16,8 @@ norecursedirs =
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
 text_file_format = rst
-addopts = --doctest-rst  -p no:unraisableexception -p no:threadexception
+addopts = --doctest-rst  -p no:unraisableexception -p no:threadexception  -m "not mpl_image_compare" --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
+remote_data_strict = True
 filterwarnings =
     # Turn all warnings into errors so they do not pass silently.
     error
@@ -25,3 +26,24 @@ filterwarnings =
     # A list of warnings to ignore follows. If you add to this list, you MUST
     # add a comment or ideally a link to an issue that explains why the warning
     # is being ignored
+    # This is hit on oldestdeps
+    ignore:.*distutils Version classes are deprecated.*
+    # This is due to dependencies building with a numpy version different from
+    # the local installed numpy version, but should be fine
+    # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
+    ignore:numpy.ufunc size changed:RuntimeWarning
+    ignore:numpy.ndarray size changed:RuntimeWarning
+    # Figure tests use agg backend so show doesn't work but we use it in peek
+    # Recent change to astropy has made our tests emit this warning.
+    ignore:'datfix' made the change:astropy.wcs.wcs.FITSFixedWarning
+    ignore:'unitfix' made the change:astropy.wcs.wcs.FITSFixedWarning
+    # TODO: This ones NEED to be fixed in future
+    # Ignore this, oh we emit so many
+    ignore::UserWarning
+    # WCSAxes is raising this
+    ignore:FLIP_TOP_BOTTOM is deprecated
+    # This is hit on oldestdeps
+    ignore:distutils Version classes are deprecated
+    ignore:The default kernel will change from 'Hann' to  'Gaussian' in a future release. To suppress this warning, explicitly select a kernel with the 'kernel' argument.:FutureWarning
+    ignore:The default boundary mode will change from 'ignore' to  'strict' in a future release. To suppress this warning, explicitly select a mode with the 'boundary_mode' argument.:FutureWarning
+
