--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ tests = [
 docs = [
   "matplotlib",
   "mpl-animators>=1.0",
-  "sphinx",
+  "sphinx<7.3.0",
   "sphinx-automodapi",
   "sphinx-changelog>=1.1.0",
   "sphinx-gallery",
