--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ zip-safe = false
 include-package-data = true
 
 [tool.setuptools.packages.find]
+exclude = ["ndcube._dev*"]
 
 [tool.setuptools_scm]
 write_to = "ndcube/_version.py"
