--- a/pytest.ini
+++ b/pytest.ini
@@ -16,7 +16,7 @@ norecursedirs =
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
 text_file_format = rst
-addopts = --doctest-rst  -p no:unraisableexception -p no:threadexception  -m "not mpl_image_compare" --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
+addopts = --doctest-rst  -p no:unraisableexception -p no:threadexception  -m "not mpl_image_compare" --doctest-ignore-import-errors
 remote_data_strict = True
 filterwarnings =
     # Turn all warnings into errors so they do not pass silently.
