--- a/tox.ini
+++ b/tox.ini
@@ -89,7 +89,7 @@ extras =
     docs
 commands =
     pip freeze --all --no-input
-    sphinx-build -j auto --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
+    sphinx-build --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
     python -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxinidir}") / "docs" / "_build" / "index.html"))'
 
 [testenv:codestyle]
