--- a/tox.ini
+++ b/tox.ini
@@ -69,11 +69,13 @@ extras =
     plotting
     reproject
     tests
-commands =
-    !oldestdeps-!online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --reruns 2 --reruns-delay 15 --timeout=180 --remote-data=any {posargs}
+commands_pre =
     oldestdeps: minimum_dependencies ndcube --filename requirements-min.txt
     oldestdeps: pip install -r requirements-min.txt
+    pip freeze --all --no-input
+commands =
+    !online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
+    online: {env:PYTEST_COMMAND} --reruns 2 --reruns-delay 15 --timeout=180 --remote-data=any {posargs}
     figure: /bin/bash -c "mkdir -p ./figure_test_images; python -c 'import matplotlib as mpl; print(mpl.ft2font.__file__, mpl.ft2font.__freetype_version__, mpl.ft2font.__freetype_build_type__)' > ./figure_test_images/figure_version_info.txt"
     figure: /bin/bash -c "pip freeze >> ./figure_test_images/figure_version_info.txt"
     figure: /bin/bash -c "cat ./figure_test_images/figure_version_info.txt"
