--- a/tox.ini
+++ b/tox.ini
@@ -72,6 +72,7 @@ extras =
 commands_pre =
     oldestdeps: minimum_dependencies ndcube --filename requirements-min.txt
     oldestdeps: pip install -r requirements-min.txt
+    oldestdeps: python -c "import astropy.time; astropy.time.update_leap_seconds()"
     pip freeze --all --no-input
 commands =
     !online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
