--- a/.codespellrc
+++ b/.codespellrc
@@ -1,9 +1,8 @@
 [codespell]
-skip = *.asdf,*.fits,*.fts,*.header,*.json,*.xsh,*cache*,*egg*,*extern*,.git,.idea,.tox,_build,*truncated,*.svg,.asv_env,.history
+skip = *.asdf,*.fits,*.fts,*.header,*.json,*.xsh,*cache*,*egg*,*extern*,.git,.idea,.tox,_build,*truncated,*.svg,.asv_env,.history,.bib
 ignore-words-list =
     alog,
     aas,
-    Hart,
     nd,
     nin,
     observ,
