--- a/.gitignore
+++ b/.gitignore
@@ -209,6 +209,7 @@ ndcube/_version.py
 docs/_build
 docs/generated
 docs/api
+docs/sg_execution_times.rst
 examples/**/*.asdf
 examples/**/*.csv
 figure_test_images*
