--- a/pytest.ini
+++ b/pytest.ini
@@ -14,9 +14,17 @@ norecursedirs =
     .history
     ndcube/extern
 doctest_plus = enabled
-doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
+doctest_optionflags =
+    NORMALIZE_WHITESPACE
+    FLOAT_CMP
+    ELLIPSIS
 text_file_format = rst
-addopts = --doctest-rst  -p no:unraisableexception -p no:threadexception  -m "not mpl_image_compare" --doctest-ignore-import-errors
+addopts =
+    --doctest-rst
+    -p no:unraisableexception
+    -p no:threadexception
+    -m "not mpl_image_compare"
+    --doctest-ignore-import-errors
 remote_data_strict = True
 filterwarnings =
     # Turn all warnings into errors so they do not pass silently.
