add back warnings

--- a/pytest.ini
+++ b/pytest.ini
@@ -34,3 +34,7 @@ filterwarnings =
     # A list of warnings to ignore follows. If you add to this list, you MUST
     # add a comment or ideally a link to an issue that explains why the warning
     # is being ignored
+    # These are raised by our tests as we don't add observor locations for the test WCS
+    ignore:target cannot be converted to ICRS, so will not be set on SpectralCoord:astropy.utils.exceptions.AstropyUserWarning
+    ignore:No observer defined on WCS, SpectralCoord will be converted without any velocity frame change:astropy.utils.exceptions.AstropyUserWarning
+    ignore:.*Set MJDREF to.*:astropy.wcs.wcs.FITSFixedWarning
