--- a/pytest.ini
+++ b/pytest.ini
@@ -34,7 +34,18 @@ filterwarnings =
     # A list of warnings to ignore follows. If you add to this list, you MUST
     # add a comment or ideally a link to an issue that explains why the warning
     # is being ignored
+    # This is due to dependencies building with a numpy version different from
+    # the local installed numpy version, but should be fine
+    # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
+    # This has to be first as it can be triggered by other warnings
+    ignore:numpy.ufunc size changed:RuntimeWarning
+    ignore:numpy.ndarray size changed:RuntimeWarning
     # These are raised by our tests as we don't add observor locations for the test WCS
+    # Nor handle correct dateref values that make astropy happy
     ignore:target cannot be converted to ICRS, so will not be set on SpectralCoord:astropy.utils.exceptions.AstropyUserWarning
     ignore:No observer defined on WCS, SpectralCoord will be converted without any velocity frame change:astropy.utils.exceptions.AstropyUserWarning
     ignore:.*Set MJDREF to.*:astropy.wcs.wcs.FITSFixedWarning
+    # This is raised by docs/explaining_ndcube/visualization.rst
+    ignore:Animating a NDCube does not support transposing the array. The world axes may not display as expected because the array will not be transposed:UserWarning
+    # This is raised by the Windows and mac os build for visualization.rst
+    ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown:UserWarning
