--- a/pytest.ini
+++ b/pytest.ini
@@ -13,6 +13,7 @@ norecursedirs =
     ndcube/_dev
     .history
     ndcube/extern
+    ndcube/utils/sphinx/
 doctest_plus = enabled
 doctest_optionflags =
     NORMALIZE_WHITESPACE
