--- a/pytest.ini
+++ b/pytest.ini
@@ -25,6 +25,7 @@ addopts =
     -p no:unraisableexception
     -p no:threadexception
     -m "not mpl_image_compare"
+    --doctest-ignore-import-errors
 filterwarnings =
     # Turn all warnings into errors so they do not pass silently.
     error
