--- a/tox.ini
+++ b/tox.ini
@@ -90,7 +90,7 @@ commands =
     {posargs}
 
 [testenv:build_docs]
-changedir = docs
+change_dir = docs
 description = Invoke sphinx-build to build the HTML docs
 extras =
     plotting
