--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,10 @@ exclude = ["ndcube._dev*"]
 [tool.setuptools_scm]
 write_to = "ndcube/_version.py"
 
+[tool.pytest.ini_options]
+asdf_schema_root = 'ndcube/asdf/resources/schemas'
+asdf_schema_tests_enabled = true
+  
 [project.entry-points."asdf.resource_mappings"]
 ndcube = "ndcube.asdf.entry_points:get_resource_mappings"
 
