--- a/ndcube/asdf/resources/manifests/ndcube-0.1.0.yaml
+++ b/ndcube/asdf/resources/manifests/ndcube-0.1.0.yaml
@@ -8,3 +8,9 @@ description: ASDF schemas and tags for NDCube classes.
 tags:
   - tag_uri: "tag:sunpy.org:ndcube/ndcube/NDCube-0.1.0"
     schema_uri: "asdf://sunpy.org/ndcube/schemas/NDCube-0.1.0"
+
+  - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/extra_coords/ExtraCoords-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/ExtraCoords-0.1.0"
+
+  - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/table_coord/TimeTableCoordinate-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/TimeTableCoordinate-0.1.0"
