Add validation for schema and manifests

--- a/pytest.ini
+++ b/pytest.ini
@@ -25,6 +25,11 @@ addopts =
     -p no:threadexception
     -m "not mpl_image_compare"
     --doctest-ignore-import-errors
+asdf_schema_tests_enabled = true
+asdf_schema_root = ndcube/asdf/resources
+remote_data_strict = True
+doctest_subpackage_requires =
+    docs/explaining_ndcube/* = numpy>=2.0.0
 filterwarnings =
     # Turn all warnings into errors so they do not pass silently.
     error
@@ -48,6 +53,3 @@ filterwarnings =
     ignore:Animating a NDCube does not support transposing the array. The world axes may not display as expected because the array will not be transposed:UserWarning
     # This is raised by the Windows and mac os build for visualization.rst
     ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown:UserWarning
-remote_data_strict = True
-doctest_subpackage_requires =
-    docs/explaining_ndcube/* = numpy>=2.0.0
