Fix for init of for specutils

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ tests =
     pytest-mpl>=0.12
     scipy
     sunpy>=5.0.0
+    specutils
 docs =
     matplotlib
     pytest-doctestplus>=0.9.0
@@ -175,4 +176,5 @@ ignore-words-list =
     ot,
     te,
     upto,
-    aas
+    aas,
+    THIRDPARTY
