Update the tox.ini and CI workflow

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist =
     py310-oldestdeps
     codestyle
     build_docs
+    schema
 
 [testenv]
 # We use bash in some of our environments so we have to whitelist it.
@@ -88,6 +89,16 @@ commands =
     figure: -m "mpl_image_compare" --mpl --remote-data=any --mpl-generate-summary=html --mpl-baseline-path=https://raw.githubusercontent.com/sunpy/sunpy-figure-tests/ndcube-main/figures/{envname}/ \
     {toxinidir}/docs \
     {posargs}
+
+[testenv:schema]
+description = Run schema tests
+deps =
+    pytest
+    asdf
+set_env =
+    asdf_schema_root = {toxinidir}/ndcube/asdf/resources
+commands=
+    pytest {env:asdf_schema_root}
 
 [testenv:build_docs]
 change_dir = docs
