--- a/ndcube/asdf/resources/schemas/QuantityTableCoordinate-0.1.0.yaml
+++ b/ndcube/asdf/resources/schemas/QuantityTableCoordinate-0.1.0.yaml
@@ -15,7 +15,7 @@ properties:
     tag: "tag:stsci.edu:asdf/unit/unit-*"
   table:
     type: array
-    properties:
+    items:
       tag: "tag:stsci.edu:asdf/unit/quantity-*"
   names:
     type: array
