--- a/ndcube/asdf/resources/schemas/NDCube-0.1.0.yaml
+++ b/ndcube/asdf/resources/schemas/NDCube-0.1.0.yaml
@@ -17,6 +17,8 @@ properties:
     tag: "tag:stsci.edu:gwcs/wcs-1.*"
   extra_coords:
     $ref: "asdf://sunpy.org/ndcube/schemas/ExtraCoords-0.1.0"
+  globa_coords:
+    $ref: "asdf://sunpy.org/ndcube/schemas/GlobalCoords-0.1.0"
 
 required: [data , wcs]
 allowAdditionalProperties: False
