--- a/ndcube/asdf/resources/manifests/ndcube-0.1.0.yaml
+++ b/ndcube/asdf/resources/manifests/ndcube-0.1.0.yaml
@@ -20,3 +20,6 @@ tags:
 
   - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/table_coord/SkyCoordTableCoordinate-0.1.0"
     schema_uri: "asdf://sunpy.org/ndcube/schemas/SkyCoordTableCoordinate-0.1.0"
+
+  - tag_uri:  "tag:sunpy.org:ndcube/global_coords/GlobalCoords-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/GlobalCoords-0.1.0"
