--- a/ndcube/asdf/resources/schemas/QuantityTableCoordinate-0.1.0.yaml
+++ b/ndcube/asdf/resources/schemas/QuantityTableCoordinate-0.1.0.yaml
@@ -24,6 +24,6 @@ properties:
   physical_types:
     type: array
 
-required: ["table"]
+required: ["table","unit"]
 additionalProperties: False
 ...
