--- a/ndcube/asdf/resources/manifests/ndcube-0.1.0.yaml
+++ b/ndcube/asdf/resources/manifests/ndcube-0.1.0.yaml
@@ -6,20 +6,20 @@ title: NDCube ASDF Manifest
 description: ASDF schemas and tags for NDCube classes.
 
 tags:
-  - tag_uri: "tag:sunpy.org:ndcube/ndcube/NDCube-0.1.0"
-    schema_uri: "asdf://sunpy.org/ndcube/schemas/NDCube-0.1.0"
+  - tag_uri: "tag:sunpy.org:ndcube/ndcube/ndcube-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/ndcube-0.1.0"
 
-  - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/extra_coords/ExtraCoords-0.1.0"
-    schema_uri: "asdf://sunpy.org/ndcube/schemas/ExtraCoords-0.1.0"
+  - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/extra_coords/extracoords-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/extra_coords-0.1.0"
 
-  - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/table_coord/TimeTableCoordinate-0.1.0"
-    schema_uri: "asdf://sunpy.org/ndcube/schemas/TimeTableCoordinate-0.1.0"
+  - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/table_coord/timetablecoordinate-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/timetablecoordinate-0.1.0"
 
-  - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/table_coord/QuantityTableCoordinate-0.1.0"
-    schema_uri: "asdf://sunpy.org/ndcube/schemas/QuantityTableCoordinate-0.1.0"
+  - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/table_coord/quantitytablecoordinate-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/quantitytablecoordinate-0.1.0"
 
-  - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/table_coord/SkyCoordTableCoordinate-0.1.0"
-    schema_uri: "asdf://sunpy.org/ndcube/schemas/SkyCoordTableCoordinate-0.1.0"
+  - tag_uri:  "tag:sunpy.org:ndcube/extra_coords/table_coord/skycoordtablecoordinate-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/skycoordtablecoordinate-0.1.0"
 
-  - tag_uri:  "tag:sunpy.org:ndcube/global_coords/GlobalCoords-0.1.0"
-    schema_uri: "asdf://sunpy.org/ndcube/schemas/GlobalCoords-0.1.0"
+  - tag_uri:  "tag:sunpy.org:ndcube/global_coords/globalcoords-0.1.0"
+    schema_uri: "asdf://sunpy.org/ndcube/schemas/global_coords-0.1.0"
