--- a/ndcube/asdf/resources/schemas/global_coords-0.1.0.yaml
+++ b/ndcube/asdf/resources/schemas/global_coords-0.1.0.yaml
@@ -1,7 +1,7 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "asdf://sunpy.org/ndcube/schemas/GlobalCoords-0.1.0"
+id: "asdf://sunpy.org/ndcube/schemas/global_coords-0.1.0"
 
 title:
   Represents the ndcube GlobalCoords object
@@ -23,8 +23,8 @@ properties:
                 - tag: "tag:stsci.edu:asdf/unit/quantity-*"
                 - tag: "tag:astropy.org:astropy/coordinates/skycoord-*"
   ndcube:
-    tag: tag:sunpy.org:ndcube/ndcube/NDCube-0.1.0
+    tag: "tag:sunpy.org:ndcube/ndcube/ndcube-0.*"
 
 required: [ndcube]
-allowAdditionalProperties: False
+additionalProperties: false
 ...
