--- a/ndcube/asdf/resources/schemas/ndcube-0.1.0.yaml
+++ b/ndcube/asdf/resources/schemas/ndcube-0.1.0.yaml
@@ -12,14 +12,14 @@ description:
 type: object
 properties:
   data:
-    tag: "tag:stsci.edu:asdf/core/ndarray-1.*"
+    description: "Must be compatible with ASDF serialization/deserialization and supported by NDCube."
   wcs:
     tag: "tag:stsci.edu:gwcs/wcs-1.*"
   extra_coords:
-    $ref: "asdf://sunpy.org/ndcube/schemas/ExtraCoords-0.1.0"
-  globa_coords:
-    $ref: "asdf://sunpy.org/ndcube/schemas/GlobalCoords-0.1.0"
+    tag: "tag:sunpy.org:ndcube/extra_coords/extra_coords/extracoords-0.*"
+  global_coords:
+    tag: "tag:sunpy.org:ndcube/global_coords/globalcoords-0.*"
 
 required: [data , wcs]
-allowAdditionalProperties: False
+additionalProperties: true
 ...
