Update the dependencies version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,10 @@ authors = [
   { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
 ]
 dependencies = [
-  "astropy>=5.0.6,!=5.1.0",
-  "gwcs>=0.18",
-  "numpy>=1.23.0"
+  "astropy>=5.3",
+  "gwcs>=0.20",
+  "numpy>=1.23.0",
+  "asdf>=2.14.4"
 ]
 dynamic = ["version"]
 
