Style changes and add warnings to NDCube converter

--- a/ndcube/asdf/resources/schemas/quantitytablecoordinate-0.1.0.yaml
+++ b/ndcube/asdf/resources/schemas/quantitytablecoordinate-0.1.0.yaml
@@ -12,7 +12,9 @@ description:
 type: object
 properties:
   unit:
-    tag: "tag:stsci.edu:asdf/unit/unit-*"
+    anyOf:
+      - tag: "tag:stsci.edu:asdf/unit/unit-*"
+      - tag: "tag:astropy.org:astropy/units/unit-1.*"
   table:
     type: array
     items:
