--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist =
     py310-oldestdeps
     codestyle
     build_docs
-    schema
+    asdf_schemas
 
 [testenv]
 # We use bash in some of our environments so we have to whitelist it.
@@ -91,7 +91,7 @@ commands =
     {toxinidir}/docs \
     {posargs}
 
-[testenv:schema]
+[testenv:asdf_schemas]
 description = Run schema tests
 deps =
     pytest
