Add asdf as an optional dep

--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,7 @@ deps =
     figure-!devdeps: scipy
 # The following indicates which extras_require will be installed
 extras =
+    asdf
     plotting
     reproject
     tests
