--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,11 +54,16 @@ plotting = [
 reproject = [
   "reproject>=0.7.1",
 ]
+asdf = [
+  "asdf>=2.14.4",
+  "astropy>=5.3.0",
+  "gwcs>=0.20"
+]
 all = [
-  "ndcube[plotting,reproject]",
+  "ndcube[plotting,reproject,asdf]",
 ]
 dev = [
-  "ndcube[tests,docs,plotting,reproject]",
+  "ndcube[tests,docs,plotting,reproject,asdf]",
 ]
 [project.urls]
 repository = "https://docs.sunpy.org/projects/ndcube"
