Add mask as a validator property

--- a/ndcube/asdf/resources/schemas/ndcube-0.1.0.yaml
+++ b/ndcube/asdf/resources/schemas/ndcube-0.1.0.yaml
@@ -21,6 +21,8 @@ properties:
     tag: "tag:sunpy.org:ndcube/global_coords/globalcoords-0.*"
   meta:
     type: object
+  mask:
+    type: object
 
 required: [data, wcs]
 additionalProperties: true
